2006-11-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[0.14.8-1 release]

	* configure.ac:
	* debian/changelog: Updating.

	* hildon-widgets/hildon-scroll-area.c: Fixing a silly compilation
	breakage.

2006-10-31  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-scroll-area.c:
	* hildon-widgets/hildon-scroll-area.h: When using a GtkTextView inside
	the HildonScrollArea try to "compensete" the cursor position
	scrolling. Fixes NB#20219.

2006-10-30  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-font-selection-dialog.c: Making the preview
	dialog wider when being font sizes are being used. Fixes NB#41501. 

2006-10-30  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-set-password-dialog.c: Removing
	auto-capitalization from the entry used to verify the password. Fixes
	NB#39585.

2006-10-24  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[0.14.7-1 release]

	* configure.ac:
	* debian/changelog: Updating. 

	* hildon-widgets/hildon-time-editor.c: Adding a "skipper" variable
	that prevents us from doing validations from within validations. When
	skipper == TRUE vallidation step is being skipped. A workaround.
	Fixes NB#44610.

2006-10-24  Daniel Elstner  <daniel.kitta@gmail.com>

	* hildon-widgets/hildon-find-toolbar.h (search, close,
	invalid_input, history_append): Remove the final user_data
	parameter from the signal prototypes.  The user_data pointer
	is a generic feature of GLib signal handling and not supposed
	to be declared explicitely. (MB#185)

2006-10-23  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com>

	* hildon-widgets/hildon-time-editor.c: Removing the extra focus grab,
	missing patch from NB#42555.

2006-10-20  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com>

	* hildon-widgets/hildon-time-editor.c:
	(hildon_time_editor_entry_keypress): Added check for not allowed keys.
	Fixes NB#43926.
