@@ -1,3 +1,12 @@
+2006-11-08  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
+	* hildon-widgets/hildon-libs.c:
+	Removed gtk_widget_grab_focus on entry_validate() and added 
+	control on entry_changed() for moving the focus when validate returns 
+	NO_ERROR. Also it's used skip_validation for not validating 
+	twice when entering a valid date in each entry.
+	Fixes NB#41059 and NB#42579.
+
 2006-11-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
 	[0.14.8-1 release]
